--- a/assets/sass/layouts/_articles.scss
+++ b/assets/sass/layouts/_articles.scss
@@ -313,6 +313,11 @@ body {
   margin-top: 140px;
 
 }
+body:has(#notification[style*="display: flex"]){
+  .article-details-area {
+    margin-top: 180px;
+  }
+}
 
 
 // social share
